# chickadee

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
manage/: DONE.md  LOGS.md  TODO.md
plans/: 2026-05-04-epics-1-and-2-design.md  2026-05-04-epics-3-and-4.md  2026-05-04-epics-5-through-8.md  2026-05-04-telegram-bot.md  2026-05-05-docker-remote-lmstudio.md
specs/claude/: AGENTS.md  DESIGN.md  models.py
specs/deepseek/: AGENTS.md  spec.md
src/: agent.py  bot.py  config.py  exceptions.py  fetcher.py  lmstudio_client.py  lmstudio_utils.py  main.py  models.py  renderer.py  router.py  vault.py  vault_index.py
tests/: conftest.py  test_bot.py  test_classifier.py  test_config.py  test_fetcher.py  test_integration.py  test_lmstudio_client.py  test_main.py  test_models.py  test_renderer.py  test_router.py  test_summariser.py  test_vault.py  test_vault_index.py
