[project]
name = "chickadee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai-slim[openai]>=1.89.1",
    "httpx>=0.28",
    "trafilatura>=2.0",
    "youtube-transcript-api>=1.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "python-slugify>=8.0",
    "pyyaml>=6.0",
    "python-telegram-bot>=21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
